bpo-30911: Fix a crash in json on platforms with unsigned char (#2684)

when pass bad strict argument.